--- a/package.json
+++ b/package.json
@@ -14,12 +14,22 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@mui/styled-engine": "^5.8.7",
+    "@react-navigation/compat": "^5.3.20",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "galio-framework": "^0.8.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.2",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
