--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "android"
     ],
     "version": "1.7.1",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
