--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "^45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-asset": "~8.5.0",
+    "expo-av": "^12.0.4",
     "expo-font": "~10.1.0",
     "expo-modules-core": "~0.9.2",
     "galio-framework": "^0.8.0",
@@ -31,10 +32,12 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
+    "react-native-modal-dropdown": "github:siemiatj/react-native-modal-dropdown",
+    "react-native-modal-selector": "^2.1.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1"
+    "react-native-screens": "~3.11.1",
+    "react-native-video": "^5.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~9.1.0"
