--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@use-expo/font": "^2.0.0",
+    "axios": "^0.27.2",
     "expo": "^45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-asset": "~8.5.0",
-    "expo-av": "^12.0.4",
+    "expo-av": "~11.2.3",
     "expo-font": "~10.1.0",
     "expo-modules-core": "~0.9.2",
     "galio-framework": "^0.8.0",
+    "primereact": "^8.4.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
@@ -36,8 +38,7 @@
     "react-native-modal-selector": "^2.1.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-video": "^5.2.0"
+    "react-native-screens": "~3.11.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~9.1.0"
