tabs carga de datos, relojito, detalle entrenamiento working ok

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "5.12.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@rneui/themed": "^4.0.0-rc.6",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
@@ -27,8 +28,10 @@
     "expo-asset": "~8.5.0",
     "expo-av": "~11.2.3",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "^13.3.1",
     "expo-modules-core": "~0.9.2",
     "galio-framework": "^0.8.0",
+    "mime": "^3.0.0",
     "primereact": "^8.4.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
