--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/creativetimofficial/argon-react-native.git"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.3.2",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/compat": "^5.1.25",
@@ -36,9 +37,12 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal-dropdown": "github:siemiatj/react-native-modal-dropdown",
     "react-native-modal-selector": "^2.1.1",
+    "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1"
