--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-modal-dropdown": "github:siemiatj/react-native-modal-dropdown",
     "react-native-modal-selector": "^2.1.1",
     "react-native-paper": "^4.12.4",
+    "react-native-powerbi": "^0.1.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1"
+    "react-native-screens": "~3.11.1",
+    "react-native-webview": "^11.18.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~9.1.0"
