--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-webview": "^11.18.1"
+    "react-native-webview": "^11.18.1",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "babel-preset-expo": "~9.1.0"
