--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/creativetimofficial/argon-react-native.git"
   },
   "dependencies": {
+    "@dietime/react-native-date-picker": "^1.2.0",
     "@react-native-community/datetimepicker": "^6.3.2",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -30,6 +31,7 @@
     "expo-av": "~11.2.3",
     "expo-font": "~10.1.0",
     "expo-image-picker": "^13.3.1",
+    "expo-linear-gradient": "^11.4.0",
     "expo-modules-core": "~0.9.2",
     "galio-framework": "^0.8.0",
     "mime": "^3.0.0",
