--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-modal-selector": "^2.1.1",
     "react-native-paper": "^4.12.4",
-    "react-native-powerbi": "^0.1.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-web": "^0.18.9",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "^11.18.1",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2"
